--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,11 +79,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
 
     //Room
     implementation 'androidx.room:room-ktx:2.3.0'
     kapt 'androidx.room:room-compiler:2.3.0'
     androidTestImplementation 'androidx.room:room-testing:2.3.0'
+
 
     ///Coil
     implementation "io.coil-kt:coil:1.2.0"
